qr-code-component/styles.css
/* --------------------------------------------- */
/* VARIABLES                                     */
/* --------------------------------------------- */

:root {
  --color-white: 0, 0%, 100%;
  --color-light-gray: 212, 45%, 89%;
  --color-blue: 220, 15%, 55%;
  --color-dark-blue: 218, 44%, 22%;
}

/* --------------------------------------------- */
/* FONTS                                         */
/* --------------------------------------------- */

@font-face {
  font-family: Outfit;
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: url(./fonts/outfit-regular.woff2) format("woff2");
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC,
    U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}

@font-face {
  font-family: Outfit;
  font-style: normal;
  font-weight: 700;
  font-display: swap;
  src: url(./fonts/outfit-bold.woff2) format("woff2");
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC,
    U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}

/* --------------------------------------------- */
/* BASE STYLES                                   */
/* --------------------------------------------- */

*,
*::before,
*::after {
  box-sizing: border-box;
}

body {
  margin: unset;
  -webkit-text-size-adjust: none;
  text-size-adjust: none;
  height: 100vh;
  background-color: hsl(var(--color-light-gray));
  font-family: Outfit, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
    "Helvetica Neue", sans-serif;
  font-size: 15px;
  display: grid;
  place-items: center;
}

img {
  max-width: 100%;
  height: auto;
  vertical-align: middle;
}

/* --------------------------------------------- */
/* QR CARD                                       */
/* --------------------------------------------- */

main {
  background-color: hsl(var(--color-white));
  max-width: 320px;
  padding: 1.075em;
  border-radius: 1.35em;
  box-shadow: 0px 1.6em 1.6em rgba(0, 0, 0, 0.05);
  text-align: center;
  margin-inline: 1.075em;
}

img {
  border-radius: 0.675em;
}

h1 {
  font-size: 1.375rem;
  line-height: 1.275;
  margin-top: 1.2em;
  color: hsl(var(--color-dark-blue));
}

p {
  line-height: 1.3;
  color: hsl(var(--color-blue));
  margin: 1.075em;
}

/* --------------------------------------------- */
/* ATTRIBUTION                                   */
/* --------------------------------------------- */

.attribution {
  position: fixed;
  bottom: 1.075em;
  margin-inline: 1.075em;
  text-align: center;
}

.attribution a {
  color: hsl(var(--color-dark-blue));
}

.attribution a:hover,
.attribution a:focus {
  color: hsl(var(--color-blue));
  outline: none;
}

